NetBSD Problem Report #50739

From www@NetBSD.org  Mon Feb  1 16:46:54 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 202587A20F
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  1 Feb 2016 16:46:54 +0000 (UTC)
Message-Id: <20160201164653.3DA817ACC0@mollari.NetBSD.org>
Date: Mon,  1 Feb 2016 16:46:53 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.bin/bdes/bdes.c: 2 *  off by one error ?
X-Send-Pr-Version: www-1.0

>Number:         50739
>Category:       bin
>Synopsis:       src/usr.bin/bdes/bdes.c: 2 *  off by one error ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 01 16:50:00 +0000 2016
>Closed-Date:    Mon Feb 01 17:56:43 +0000 2016
>Last-Modified:  Mon Feb 01 17:56:43 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160131
>Organization:
>Environment:
>Description:

1.

[src/usr.bin/bdes/bdes.c:428]: (style) Array index 'i' is used before limits check.


     for (i = 0; ibuf[i] && i < 16; i++)

2.


[src/usr.bin/bdes/bdes.c:448]: (style) Array index 'i' is used before limits check.

Duplicate.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50739 CVS commit: src/usr.bin/bdes
Date: Mon, 1 Feb 2016 12:41:37 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Feb  1 17:41:37 UTC 2016

 Modified Files:
 	src/usr.bin/bdes: bdes.c

 Log Message:
 PR/50739: David Binderman: Check bounds before dereferencing.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/usr.bin/bdes/bdes.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 01 Feb 2016 17:56:43 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.