PR/50739: David Binderman: Check bounds before dereferencing.